tests/test-files/parse-for.txt
================================================================================
Malformed for expression
================================================================================

(package test-parser)

(define f (for))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:15
   |
 3 |  (define f (for))
   |                ^ expected pattern

================================================================================
Malformed for expression
================================================================================

(package test-parser)

(define f (for x))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:17
   |
 3 |  (define f (for x))
   |                  ^ expected in

================================================================================
Malformed for expression
================================================================================

(package test-parser)

(define f (for x y))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:19
   |
 3 |  (define f (for x y))
   |                    ^ expected in

================================================================================
Malformed for expression
================================================================================

(package test-parser)

(define f (for x in iter))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:25
   |
 3 |  (define f (for x in iter))
   |                          ^ expected body

================================================================================
Malformed for expression
================================================================================

(package test-parser)

(define f (for :label x in iter))

--------------------------------------------------------------------------------

error: Malformed for expression
  --> test:3:32
   |
 3 |  (define f (for :label x in iter))
   |                                 ^ expected body
